--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^17.0.1",
     "react-reveal": "^1.2.2",
     "react-scripts": "4.0.1",
+    "react-spring": "^8.0.27",
     "react-transition-group": "^4.4.1",
     "styled-components": "^5.2.1",
     "uniqid": "^5.2.0",
